# multi-agent-systems-playground

./: .gitignore  README.md  agent.py  agentic_rag.py  config.py  main.py  prompt.py  pyproject.toml  requirements.txt  retrieval_service.py  supervisor.py  supervisor_prompt.py  tools.py  workflow_log.py
example_output/: does_the_usa_invade_iran.md  messi_vs_ronaldo.md  rag_keys.md  uefa_champions_league_matches_today.md  what_is_rag.md
hw_4/: agent.py  custom_react_agent.py  main.py  simple_memory.py  task.md  tools.py
mcp_servers/: __init__.py  report_mcp.py  search_mcp.py
rag_agent/: __init__.py  agent.py  prompt.py  tools.py
src/: config.py
src/critic_agent/: agent.py  prompt.py
src/planer_agent/: agent.py  prompt.py
src/playground/: main.py
src/research_agent/: agent.py  prompt.py
src/save_report/: agent.py  prompt.py
