[project]
name = "multi-agent-systems-playground"
version = "0.1.0"
description = "A playground for experimenting with multi-agent systems using LangChain"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai",
    "langgraph",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
